feature: added `sydicated_creator`.

--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -713,6 +713,13 @@ div.lb-author__avatar {
   padding-right: 20px;
 }
 
+.lb-producer__author:before {
+    content: '(';
+}
+.lb-producer__author:after {
+    content: ')';
+}
+
 // Author End
 
 
