--- a/server/liveblog/themes/themes_assets/default/templates/template-post-comment.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post-comment.html
@@ -6,18 +6,18 @@
 {% set secondary = item.groups[1].refs[1].item %}
   <!-- author plus avatar -->
   <div class="lb-author lb-author--indent">
-    {% if settings.showAuthor and (secondary.original_creator or secondary.sydicated_creator) %}
+    {% if settings.showAuthor and (secondary.original_creator or secondary.syndicated_creator) %}
       {% if settings.showAuthorAvatar %}
         {% if secondary.original_creator.picture_url %}
         <img class="lb-author__avatar" src="{{ secondary.original_creator.picture_url }}" />
-        {% elif secondary.sydicated_creator.picture_url  and settings.showSyndicatedAuthor %}
-        <img class="lb-author__avatar" src="{{ mainItem.sydicated_creator.picture_url }}" />
+        {% elif secondary.syndicated_creator.picture_url  and settings.showSyndicatedAuthor %}
+        <img class="lb-author__avatar" src="{{ mainItem.syndicated_creator.picture_url }}" />
         {% else %}
         <div class="lb-author__avatar"></div>
         {% endif %}
         <div class="lb-author__name">
-        {% if secondary.sydicated_creator and settings.showSyndicatedAuthor %}
-            {{ secondary.sydicated_creator.display_name }}
+        {% if secondary.syndicated_creator and settings.showSyndicatedAuthor %}
+            {{ secondary.syndicated_creator.display_name }}
         {% else %}
             {{ secondary.original_creator.display_name }}
         {% endif %}
