fix: issues with ads generation.

--- a/client/app/scripts/liveblog-edit/views/output-modal.html
+++ b/client/app/scripts/liveblog-edit/views/output-modal.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="field">
                     <label translate>Adverts frequency</label>
-                    <input type="number" min="4" max="20" ng-model="vm.output.settings.frequency">
+                    <input type="text" min="4" max="20" ng-model="vm.output.settings.frequency">
                 </div>
                 <div class="field">
                     <label translate>Order</label>
