Squashed 'server/liveblog/themes/themes_assets/default/' changes from 1c6a438..fb74897
fb74897 Merge pull request #80 from liveblog/fix/relative-protocol
f49d127 fix: lint issues.
193cd54 fix: running local gulp server.
48e5fe9 fix: issues with build template.html
ecc23cd fix: rename liveblog.less to default.less.
89f2f0d fix: replace embed providers relative protocol with https.
2ed285d fix: make amp an truly default extension.
bf85c29 Merge pull request #79 from aleksandarjelicic/changes
1779792 added classes for html/body, reset for SEO solved, font size on smaller screens

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: fb74897c3106b31ef85194347f7b0c30ed0ff946

--- a/less/tags.less
+++ b/less/tags.less
@@ -1,20 +1,12 @@
 // Liveblog 3 SEO default Theme
 @import "globals.less";
 
-html {
+html.lb-wrapHtml {
     display: block;
 }
 
-body {
-    background-repeat: no-repeat;
-    background-position-x: center;
-    font-family: 'Helvetica Neue', Helvetica, arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-weight: 400;
-    color: @black;
-    font-size: 17px;
-    line-height: 1.3em;
+body.lb-wrapBody {
+    
 }
 
 .lb-timeline {
