--- a/templates/template-index.html
+++ b/templates/template-index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="lb-wrapHtml">
   <head>
     <title>Liveblog Test</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -11,7 +11,7 @@
     <!-- inject:css -->
     <!-- endinject -->
   </head>
-  <body>
+  <body class="lb-wrapBody">
     {% include "template-timeline.html" %}
     <!-- inject:js -->
     <!-- endinject -->
