--- a/templates/template-embed-providers.html
+++ b/templates/template-embed-providers.html
@@ -1,3 +1,3 @@
 <!-- These are cached for most users anyway, so why bother with arbitrary scripts -->
-<script async defer src="//platform.instagram.com/en_US/embeds.js"></script>
-<script async defer src="//platform.twitter.com/widgets.js"></script>
+<script async defer src="https://platform.instagram.com/en_US/embeds.js"></script>
+<script async defer src="https://platform.twitter.com/widgets.js"></script>
