--- a/client/app/scripts/liveblog-edit/views/settings.html
+++ b/client/app/scripts/liveblog-edit/views/settings.html
@@ -136,13 +136,18 @@
                                               readonly="readonly"
                                               select-text-on-click>{{ settings.blogPreferences.embed_switch ? settings.embeds.resizeing : settings.embeds.normal }}</textarea>
                                     <a href="{{ settings.publicUrl }}" target="_blank"><span ng-bind="settings.publicUrl"></span> <i class="icon-external"></i></a>
-<!-- @TODO: compile the `styleUrl` before.
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="inputStylesheet" class="control-label" translate>Stylesheet</label>
+                                <div class="form-input">
                                     <a ng-if="settings.selectedTheme.settings.removeStylesESI"
                                        href="{{ settings.styleUrl }}"
                                        target="_blank">
-                                          <span ng-bind="settings.styleUrl"></span><i class="icon-external"></i>
+                                          <span ng-bind="settings.styleUrl"></span> <i class="icon-external"></i>
                                     </a>
- -->                                </div>
+                                </div>
                             </div>
 
                             <div lb-syndication-switch></div>
