--- a/client/app/scripts/liveblog-edit/views/output-modal.html
+++ b/client/app/scripts/liveblog-edit/views/output-modal.html
@@ -95,29 +95,7 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="preview" ng-if="vm.output.preview_logo.img">
-                                <div class="crop-area">
-                                    <div class="preview">
-                                        <div sd-plain-image
-                                            class="preview-large">
-                                            data-src="vm.output.preview_logo.url"
-                                            data-progress-width="vm.output.progress_logo.width"
-                                            data-file="vm.output.preview_logo.img"
-                                            data-min-width="20"
-                                            data-min-height="20"
-                                            data-max-height="50"
-                                            data-max-width="250"
-                                            data-msg-error-max="Sorry, but logo image must smaller then 250x50"
-                                            data-msg-error-min="Sorry, but logo image must be at least 20x20"
-                                        ></div>
-                                    </div>
-                                </div>
-                                <figure class="ads-media-buttons">
-                                    <button class="btn btn-warning pull-right" ng-click="vm.removeLogoImage()" translate>Remove</button>
-                                </figure>
-                            </div>
-                            <div class="preview" ng-if="vm.output.preview_logo.url && !vm.output.preview_logo.img">
+                            <div class="preview" ng-if="vm.output.preview_logo.url">
                                 <div class="crop-area">
                                     <div class="preview">
                                         <div class="preview-large">
