LBSD-1874 - indication of minutes in scorecard fix

--- a/client/app/scripts/liveblog-edit/views/scorecards.html
+++ b/client/app/scripts/liveblog-edit/views/scorecards.html
@@ -198,7 +198,7 @@
         margin-right: 12px;
     }
     .scorecard-top .scorecard-top__scorers li div.time .freetype--element:after {
-        content: '′';
+        content: '\2032';
     }
     .blogedit .panel--editor .content .editor-holder .scorecard-top .scorecard-top__scorers > li.ng-scope {
         display: flex;
