LBSD-1813, LBSD-1812 - scorecard image issues

--- a/client/app/scripts/liveblog-edit/views/freetype-image.html
+++ b/client/app/scripts/liveblog-edit/views/freetype-image.html
@@ -21,7 +21,7 @@
                         <div class="text" translate>Drop it here</div>
                         <div class="input-holder">
                             <input type="file" accept="image/*;capture=camera" ngf-select="preview.img = $files[0]"
-                            label="{{ 'or Select from computer' | translate }}" ng-change="ft.saveImage()" ng-model="preview.img">
+                            label="{{ 'or Select from computer' | translate }}"  ng-model="preview.img">
                         </div>
                         </div>
                     </div>
