--- a/client/app/scripts/liveblog-edit/views/output-embed-code-modal.html
+++ b/client/app/scripts/liveblog-edit/views/output-embed-code-modal.html
@@ -10,7 +10,12 @@
                     <label for="inputEmbedCode" class="control-label" translate>Embed code</label>
                     <div class="form-input">
                         <textarea class="form-control" rows="6" readonly="readonly" select-text-on-click><iframe width="100%" height="715" src="{{ settings.blog.public_urls.output[settings.output._id] }}" frameborder="0" allowfullscreen></iframe></textarea>
+                       
                         <a href="{{ settings.blog.public_urls.output[settings.output._id] }}" target="_blank"><span ng-bind="settings.blog.public_urls.output[settings.output._id]"></span> <i class="icon-external"></i></a>
+                        <div ng-if="settings.output.styleUrl">
+                            <label for="externalStylesheet" class="control-label" translate>Stylesheet</label> <br />
+                            <a href="{{ settings.output.styleUrl }}" target="_blank"><span ng-bind="settings.output.styleUrl"></span> <i class="icon-external"></i></a>
+                        </div>
                     </div>
                 </div>
             </fieldset>
