--- a/client/app/scripts/liveblog-edit/views/scorecards.html
+++ b/client/app/scripts/liveblog-edit/views/scorecards.html
@@ -269,14 +269,14 @@
     <div class="scorecard-top__column scorecard-top__column--result">
         <div>
             <label for="home.score" hide-render>Score Home</label>
-            <input id="home.score" name="$home.score" class="team-score" number="true" necessary="true" initial="0" />
+            <input id="home.score" name="$home.score" class="team-score" number="true" necessary="true" />
         </div>
         <div class="team-score-colon">
             <span class="team-score">:</span>
         </div>
         <div>
             <label for="away.score" hide-render>Score Away</label>
-            <input id="away.score" name="$away.score" class="team-score" necessary="true" initial="0" number="true" />
+            <input id="away.score" name="$away.score" class="team-score" necessary="true" number="true" />
         </div>
     </div>
     <hr hide-render>
