LBSD-1887 change info text in theme manager

--- a/client/app/scripts/liveblog-themes/views/list.html
+++ b/client/app/scripts/liveblog-themes/views/list.html
@@ -34,7 +34,7 @@
             ng-if="!vm.isSolo()"
             class="alert alert-info alert--margin-left"
             role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><i class="icon-close-small"></i></button>Customize your themes to the specific needs of your organisation. All you need is someone in your team with frontend development skills and a download of the classic theme as a good starting point to create your own. You find all required code and some info on <a href="https://github.com/liveblog/liveblog/blob/e7945a48fcd19c1a959d8e83706114f13864871c/CUSTOM-THEME.MD" target="_blank">Github</a>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><i class="icon-close-small"></i></button>You want to customize a Live Blog theme? All you need is someone in your team with frontend development skills, a download of the <a href="https://github.com/liveblog/generator-liveblog-theme" target="_blank">theme generator</a> and with a good read of our <a href="https://wiki.sourcefabric.org/display/LIVEBLOG/Live+Blog+themes" target="_blank">documentation in the Wiki</a> - you can easily introduce a theme extension matching the exact needs of your organisation.
         </div>
         <!-- LIST VIEW -->
         <script type="text/ng-template" id="themeTree">
