Squashed 'server/liveblog/themes/themes_assets/default/' changes from ad8eb82..8be0068
8be0068 Merge pull request #81 from liveblog/fix/extension-templates
ef056cb Merge pull request #82 from gideonlehmann/patch-1
3a36010 Update README.md
69ca65e fix: generate template.htm with base template/template.html.
ad50be7 LBSD-1885 slideshow fix

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 8be0068651b75611cb6f45313d4d27e2e98351b1

--- a/templates/template-slideshow.html
+++ b/templates/template-slideshow.html
@@ -1,4 +1,4 @@
-<div id="slideshow">
+<div id="lb-slideshow">
   <div class="container">
     {% for ref in refs %}
       {% include "template-item-image.html" %}
