--- a/less/slideshow.less
+++ b/less/slideshow.less
@@ -57,105 +57,105 @@
   }
 }
 
-.lb-timeline {
-  #slideshow {
-    :focus {
-      outline: none;
-    }
 
-    ::-moz-focus-inner {
-      border: 0;
-    }
+#lb-slideshow {
+  :focus {
+    outline: none;
+  }
 
-    position: fixed;
-    width: 100%;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.4);
-    overflow: hidden;
+  ::-moz-focus-inner {
+    border: 0;
+  }
 
-    div.container {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.4);
+  overflow: hidden;
+
+  div.container {
+    height: 100%;
+
+    figure {
+      width: 100%;
       height: 100%;
+      float: left;
+      text-align: center;
+      margin: 0;
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-      figure {
+      img {
+        max-height: 100%;
+      }
+
+      figcaption {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        padding: 20px 10px 10px 10px;
         width: 100%;
-        height: 100%;
-        float: left;
-        text-align: center;
-        margin: 0;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        img {
-          max-height: 100%;
-        }
-
-        figcaption {
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          padding: 20px 10px 10px 10px;
-          width: 100%;
-          color: white;
-          font-size: 1rem;
-          text-shadow: 0px 0px 3px #000;
-          background: rgba(0,0,0,0);
-          background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
-          background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.4)));
-          background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
-          background: -o-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
-          background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
-          background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
-        }
+        color: white;
+        font-size: 1rem;
+        text-shadow: 0px 0px 3px #000;
+        background: rgba(0,0,0,0);
+        background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+        background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.4)));
+        background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+        background: -o-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+        background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
       }
-    }
-
-    button {
-      position: absolute;
-      outline: none;
-      color: black;
-      font-size: 22px;
-    }
-
-    button.fullscreen {
-      top: 0px;
-      right: 40px;
-      img {
-        width: 24px;
-        height: 24px;
-      }
-    }
-
-    button.close {
-      top: 0;
-      right: 0;
-      z-index: 2;
-      img {
-        width: 24px;
-        height: 24px;
-      }
-    }
-
-    button.arrows {
-      top: 0;
-      height: 100%;
-      img {
-        width: 24px;
-        height: 24px;
-      }
-    }
-
-    button.arrows.prev {
-      left: 0;
-    }
-
-    button.arrows.next {
-      right: 0;
     }
   }
+
+  button {
+    position: absolute;
+    outline: none;
+    color: black;
+    font-size: 22px;
+  }
+
+  button.fullscreen {
+    top: 0px;
+    right: 40px;
+    img {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  button.close {
+    top: 0;
+    right: 0;
+    z-index: 2;
+    img {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  button.arrows {
+    top: 0;
+    height: 100%;
+    img {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  button.arrows.prev {
+    left: 0;
+  }
+
+  button.arrows.next {
+    right: 0;
+  }
 }
+
