Squashed 'server/liveblog/themes/themes_assets/default/' changes from 321b47f..33a9aff
33a9aff fix: replace in time `_updated` with `published_date`.
e989737 Merge pull request #87 from liveblog/fix/classic-theme
818006f fix: lint issues.

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 33a9aff7cf2dcd9760f973e9d6bb4318fcdb6ce9

--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -33,7 +33,7 @@
   <!-- remove advertisement stylization-->
   {% if item.post_items_type != "advertisement" %}
 
-  <div class="lb-post-date" data-js-timestamp="{{ item._updated }}">{{ item._updated }}</div>
+  <div class="lb-post-date" data-js-timestamp="{{ item.published_date }}">{{ item.published_date }}</div>
 
   <!-- author plus avatar -->
   <div class="lb-author">
