Squashed 'server/liveblog/themes/themes_assets/default/' changes from bce2be0..e67eba8
e67eba8 Merge pull request #90 from aleksandarjelicic/changes
a9b4709 output channel logo overwrite fix
63c15fc breakpoint change, added padding for post on smaller screens

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: e67eba8d742fc7783eae9ce9d60d7813a09d371e

--- a/less/comments.less
+++ b/less/comments.less
@@ -16,6 +16,10 @@
 			border-radius: 0px;
 	}
 
+	.lb-post--highlighted .lb-author--indent .lb-author__avatar--comment {
+		background: #f2f5f8;
+	}
+
 	.lb-author--indent {
 		float: none;
 		justify-content: flex-start;
@@ -43,7 +47,7 @@
 
 }
 
-@media screen and (max-width: 680px) {
+@media @medium {
 	.lb-timeline {
 		.items-containerIndent {
 			margin-left: 0px;
@@ -62,7 +66,7 @@
 	                }
 	        }
 	        .lb-author__avatar--comment {
-	            height: auto;
+
 	        }
 	    }
 		}
