--- a/less/tags.less
+++ b/less/tags.less
@@ -6,7 +6,7 @@ html.lb-wrapHtml {
 }
 
 body.lb-wrapBody {
-    
+
 }
 
 .lb-timeline {
@@ -157,7 +157,7 @@ body.lb-wrapBody {
 
 }
 
-@media (max-width: 600px) {
+@media @medium {
     .lb-timeline article blockquote p {
         font-size: 1em;
         line-height: 1.4em;
