--- a/less/iframe.less
+++ b/less/iframe.less
@@ -1,4 +1,4 @@
-iframe { // Make them iframes behave
+iframe#liveblog-iframe { // Make them iframes behave
   width: 100% !important; // General
   max-width: 100% !important; // Instagram
 }
