Squashed 'server/liveblog/themes/themes_assets/default/' changes from e67eba8..8b062fb
8b062fb fix: update posts mechanism.

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 8b062fb0eeb87cff3a30f73ba11e5ab352383bd5

--- a/templates/template-post-comment.html
+++ b/templates/template-post-comment.html
@@ -10,7 +10,7 @@
       {% if settings.showAuthorAvatar %}
         {% if secondary.original_creator and secondary.original_creator.picture_url %}
         <img class="lb-author__avatar" src="{{ secondary.original_creator.picture_url }}" />
-        {% elif secondary.original_creator and secondary.syndicated_creator.picture_url  and settings.showSyndicatedAuthor %}
+        {% elif secondary.original_creator and secondary.syndicated_creator  and settings.showSyndicatedAuthor %}
         <img class="lb-author__avatar" src="{{ mainItem.syndicated_creator.picture_url }}" />
         {% else %}
         <div class="lb-author__avatar"></div>
