--- a/server/liveblog/themes/themes_assets/default/templates/template-post-comment.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post-comment.html
@@ -29,24 +29,29 @@
     {% endif %}
   </div>
   <!-- end author -->
-    {% for ref in item.groups[1].refs %}
-      {% if loop.index0 > 0 %}
-          {% if ref.item.item_type == "image" %}
-          <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %} {{ref.item.item_type}}">
-          {% else %}
-          <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {{ref.item.item_type}}">
-          {% endif %}
-            {% if ref.item.item_type == "embed" %}
-              {% include "template-item-embed.html" %}
-            {% elif ref.item.item_type == "image" %}
-              {% include "template-item-image.html" %}
-            {% elif ref.item.item_type == "quote" %}
-              {% include "template-item-quote.html" %}
-            {% else %}
-              <article>{{ ref.item.text | safe }}</article>
+    {% if item and item.groups and
+            item.groups[1] and
+            item.groups[1].refs and
+            (item.groups[1].refs | length > 0) %}
+        {% for ref in item.groups[1].refs %}
+          {% if loop.index0 > 0 %}
+              {% if ref.item.item_type == "image" %}
+              <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %} {{ref.item.item_type}}">
+              {% else %}
+              <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {{ref.item.item_type}}">
+              {% endif %}
+                {% if ref.item.item_type == "embed" %}
+                  {% include "template-item-embed.html" %}
+                {% elif ref.item.item_type == "image" %}
+                  {% include "template-item-image.html" %}
+                {% elif ref.item.item_type == "quote" %}
+                  {% include "template-item-quote.html" %}
+                {% else %}
+                  <article>{{ ref.item.text | safe }}</article>
+                {% endif %}
+               </div>
             {% endif %}
-           </div>
-        {% endif %}
-    {% endfor %}
+        {% endfor %}
+    {% if %}
 </div>
 {% endif %}
