--- a/server/liveblog/themes/themes_assets/default/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-post.html
@@ -75,26 +75,31 @@
   {% if type == "comment" %}
     {% include "template-post-comment.html" %}
   {% else %}
-    {% for ref in item.groups[1].refs %}
-      {% if ref.item.item_type == "image" %}
-      <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %} {{ref.item.item_type}}">
-      {% else %}
-      <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {{ref.item.item_type}}">
-      {% endif %}
-        {% if ref.item.item_type == "embed" %}
-          {% include "template-item-embed.html" %}
-        {% elif ref.item.item_type == "image" %}
-          {% include "template-item-image.html" %}
-        {% elif ref.item.item_type == "quote" %}
-          {% include "template-item-quote.html" %}
-        {% elif ref.item.item_type == "comment" %}
-          {% include "template-item-comment.html" %}
-        {% else %}
-          <article>{{ ref.item.text | safe }}</article>
-        {% endif %}
-      </div>
-    {% endfor %}
+    {% if item and item.groups and
+            item.groups[1] and
+            item.groups[1].refs and
+            (item.groups[1].refs | length > 0) %}
+        {% for ref in item.groups[1].refs %}
+          {% if ref.item.item_type == "image" %}
+          <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {% if ref.item.meta.media.renditions.original.height > ref.item.meta.media.renditions.original.width %}portrait{% endif %} {{ref.item.item_type}}">
+          {% else %}
+          <div class="{% if not item.sticky or settings.stickyPosition == 'bottom' %}lb-item{% endif %} {{ref.item.item_type}}">
+          {% endif %}
+            {% if ref.item.item_type == "embed" %}
+              {% include "template-item-embed.html" %}
+            {% elif ref.item.item_type == "image" %}
+              {% include "template-item-image.html" %}
+            {% elif ref.item.item_type == "quote" %}
+              {% include "template-item-quote.html" %}
+            {% elif ref.item.item_type == "comment" %}
+              {% include "template-item-comment.html" %}
+            {% else %}
+              <article>{{ ref.item.text | safe }}</article>
+            {% endif %}
+          </div>
+        {% endfor %}
     {% endif %}
+  {% endif %}
   </div>
   <!-- item end -->
 
