--- a/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-timeline.html
@@ -102,24 +102,24 @@
       </div>
     {% if settings.stickyPosition == 'bottom' and api_response.stickyPosts._items|length > 0 %}
       <section class="lb-posts list-group sticky">
-        {% if api_response and api_response.stickyPosts and (api_response.stickyPosts._items | lenght > 0) %}
-            {% for item in api_response.stickyPosts._items %}
-              {% if not item.deleted %}
-                {% include "template-post.html" %}
-              {% endif %}
-            {% endfor %}
-        {% endif %}
+        {% for item in api_response.stickyPosts._items %}
+          {% if not item.deleted %}
+            {% include "template-post.html" %}
+          {% endif %}
+        {% endfor %}
       </section>
     {% endif %}
       <div data-empty-message class="lb-post empty-message {% if api_response.posts._items|length %}mod--displaynone{% endif %}">
         <div>{{ translate("No posts for now") }}</div>
       </div>
       <section class="lb-posts list-group normal">
-        {% for item in api_response.posts._items %}
-          {% if not item.deleted %}
-            {% include "template-post.html" %}
-          {% endif %}
-        {% endfor %}
+        {% if api_response.posts._items|length > 0 %}
+            {% for item in api_response.posts._items %}
+              {% if not item.deleted %}
+                {% include "template-post.html" %}
+              {% endif %}
+            {% endfor %}
+        {% endif %}
       </section>
       {% if api_response.posts._meta.max_results < api_response.posts._meta.total %}
         <button class="lb-button load-more-posts" data-js-loadmore>
