--- a/server/liveblog/themes/themes_assets/amp/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-post.html
@@ -1,17 +1,24 @@
-<article id="{{ item._id }}" data-sort-time="{{ item.published_date | date('x') }}"
-  class="lb-post list-group-item show-author-avatar">
+<article 
+id="{{ item._id | string | replace(':', '') | replace('-', '') | replace('.', '') }}" 
+data-update-time="{{ item._updated | date('X') }}" 
+data-sort-time="{{ item.published_date | date('X') }}" 
+class="lb-post list-group-item show-author-avatar  {% if item.lb_highlight %}lb-post--highlighted{% endif %}"
+{% if item.deleted %} data-tombstone="true" {% endif %}>
 
-  {% if item.sticky %}
-  <div class="lb-type"></div>
-  {% else %}
-  <div class="lb-type lb-type--text"></div>
-  {% endif %}
+  <div class="lb-type lb-type--{{ item.post_items_type }}"></div>
+  
+  {% if item.sticky and item.lb_highlight %}
+  <amp-img src="{{ assets_root }}images/pinpost.svg" class="pin-icon" />
+  <amp-img src="{{ assets_root }}images/highlighted.svg" class="highlight-icon" />
+{% elif item.sticky %}
+  <amp-img src="{{ assets_root }}images/pinpost.svg" class="pin-icon" />
+{% elif item.lb_highlight %}
+  <amp-img src="{{ assets_root }}images/highlighted.svg" class="highlight-icon" />
+{% elif item.post_items_type == "advertisement" %}
+  <div class="lb-advertisement">{{ translate('Advertisement') }}</div>
+{% endif %}
 
-  {% if item.highlight %}
-  <div class="lb-post-highlighted"></div>
-  {% endif %}
-
-  <div class="lb-post-date">{{ item.published_date | date('')  }}</div>
+  <div class="lb-post-date">{{ item._updated | date('')  }}</div>
 
   <!-- author plus avatar -->
   <div class="lb-author">
@@ -41,12 +48,10 @@
         {% include "template-item-embed.html" %}
       {% elif ref.item.item_type == "image" %}
         {% include "template-item-image.html" %}
-      {% elif ref.item.item_type == "text" or ref.item.item_type == "comment" %}
-        <article>{{ ref.item.text | safe }}</article>
+      {% elif ref.item.group_type == "freetype" %}
+      <article>This content is not currently available</article>
       {% else %}
-      <article>
-        <i class="lb-item--info">This content is not currently available.</i>
-      </article>
+      <article>{{ ref.item.text | safe }}</article>
       {% endif %}
     </div>
   {% endfor %}
