--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -52,6 +52,9 @@
         <span class="lb-producer{% if settings.showSyndicatedAuthor %} lb-producer__author{% endif %}">{{ item.syndication_in.producer_blog_title }}</span>
       {% endif %}
       </div>
+      {% if type == 'comment' %}
+        <img class="lb-author__avatar lb-author__avatar--comment" src="{{ assets_root }}images/comment_icon.svg">
+      {% endif %}
       {% if settings.showAuthorAvatar and type != 'comment' %}
         {% if mainItem.syndicated_creator and settings.showSyndicatedAuthor %}
         <img class="lb-author__avatar" src="{{ mainItem.syndicated_creator.picture_url }}" />
