Squashed 'server/liveblog/themes/themes_assets/default/' changes from 7a4a9ec..031af3b
031af3b fix: update from repo, added translation for credit image.

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 031af3b12d68fc939367e6a836cd1efb3e4cf56e

--- a/less/embed.less
+++ b/less/embed.less
@@ -739,6 +739,14 @@
       content: ')';
   }
 
+lb-producer__author:before {
+    content: '(';
+}
+
+.lb-producer__author:after {
+    content: ')';
+}
+
 // Author End
   .illustration {
       display: none;
