--- a/templates/template-item-image.html
+++ b/templates/template-item-image.html
@@ -14,7 +14,7 @@
     {% endif %}
     {% if ref.item.meta.credit %}
       <span ng-if="ref.item.meta.credit" class="credit">
-        <b>Credit:</b> {{ ref.item.meta.credit }}
+        <b>{{ translate('credit:') }}</b> {{ ref.item.meta.credit }}
       </span>
     {% endif %}
   </figcaption>
