Squashed 'server/liveblog/themes/themes_assets/default/' changes from 031af3b..5b2e123
5b2e123 fix: slideshow isses.

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 5b2e1234148d78feb2309aa065328d61f2c6d07c

--- a/templates/template-slideshow.html
+++ b/templates/template-slideshow.html
@@ -1,3 +1,5 @@
+{% macro translate(text) %}{% if not options.i18n[settings.language] %}{{ text }}{% elif not options.i18n[settings.language][text] %}{{ text }}{% else %}{{ options.i18n[settings.language][text] }}{% endif %}{% endmacro %}
+
 <div id="lb-slideshow">
   <div class="container">
     {% for ref in refs %}
