Squashed 'server/liveblog/themes/themes_assets/default/' changes from 5b2e123..0c1d43e
0c1d43e chore: rebuild.
e7e91c6 Merge branch 'master' of github.com:liveblog/liveblog-default-theme
661f8a7 Merge pull request #98 from aleksandarjelicic/changes
8fd48ad fix: `credit:` in image fullscreen.
ac1fa2a vertical timeline changes

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 0c1d43ee936d738fa7733e10d6ea76b29c2c8948

--- a/templates/template-item-image.html
+++ b/templates/template-item-image.html
@@ -13,9 +13,8 @@
       </span>&nbsp;
     {% endif %}
     {% if ref.item.meta.credit %}
-      <span ng-if="ref.item.meta.credit" class="credit">
-        <b>{{ translate('credit:') }}</b> {{ ref.item.meta.credit }}
-      </span>
+      <b>{{ translate('credit:') }}</b>
+      <span class="credit">{{ ref.item.meta.credit }}</span>
     {% endif %}
   </figcaption>
 </figure>
