fix: added warn when selecting amp theme.
LBSD-1929

--- a/client/app/scripts/liveblog-edit/styles/settings.scss
+++ b/client/app/scripts/liveblog-edit/styles/settings.scss
@@ -237,3 +237,9 @@ div.timepicker-popup div.timepicker-core button.btn.btn-info {
     margin: 0;
     float: left;
 }
+
+
+p.warn-block {
+    color: darkred;
+    font-size: 14px;
+}
