--- a/client/app/scripts/liveblog-edit/views/settings.html
+++ b/client/app/scripts/liveblog-edit/views/settings.html
@@ -105,6 +105,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
+                                <p ng-if="settings.selectedTheme.name == 'amp'" class="warn-block"> Be aware that the Liveblog 3 AMP theme does not yet support all Live Blog features and post types.</p>
                                 <label for="inputTheme" class="control-label" translate>Theme</label>
                                 <div class="form-input">
                                     <select
