--- a/client/app/scripts/liveblog-themes/views/list.html
+++ b/client/app/scripts/liveblog-themes/views/list.html
@@ -34,8 +34,18 @@
             ng-if="!vm.isSolo()"
             class="alert alert-info alert--margin-left"
             role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><i class="icon-close-small"></i></button>You want to customize a Live Blog theme? All you need is someone in your team with frontend development skills, a download of the <a href="https://github.com/liveblog/generator-liveblog-theme" target="_blank">theme generator</a> and with a good read of our <a href="https://wiki.sourcefabric.org/display/LIVEBLOG/Live+Blog+themes" target="_blank">documentation in the Wiki</a> - you can easily introduce a theme extension matching the exact needs of your organisation.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><i class="icon-close-small"></i></button>
+            You want to customize a Live Blog theme? All you need is someone in your team with frontend development skills, a download of the <a href="https://github.com/liveblog/generator-liveblog-theme" target="_blank">theme generator</a> and with a good read of our <a href="https://wiki.sourcefabric.org/display/LIVEBLOG/Live+Blog+themes" target="_blank">documentation in the Wiki</a> - you can easily introduce a theme extension matching the exact needs of your organisation.
         </div>
+        <div
+            ng-if="!vm.isSolo()"
+            class="alert alert-error alert--margin-left"
+            role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><i class="icon-close-small"></i></button>
+            Be aware that the Liveblog 3 AMP theme does not yet support all Live Blog features and post types.
+        </div>
+
+
         <!-- LIST VIEW -->
         <script type="text/ng-template" id="themeTree">
             <ul>
